clang/test/BSC/Negative/Ownership/RuleCheck/cast_between_owned_and_borrow/cast_between_owned_and_borrow.cbs
// RUN: %clang_cc1 -verify %s

void cast_owned_to_borrow(int *_Owned p) {
    int *_Borrow q = (int *_Borrow) p; // expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'int *_Borrow'}}
}

int *_Owned cast_borrow_to_owned(int *_Borrow p) {
    int *_Owned q = (int *_Owned) p; // expected-error {{incompatible _Owned types, cannot cast 'int *_Borrow' to 'int *_Owned'}}
    return q;
}